[package]
name = "newtonian-tetris"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4"
bevy_rapier2d = "0.8"
rand = "0.8.0"
nalgebra = "0.24"
