[package]
name = "newtonian-tetris"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_rapier2d = "0.11"
rand = "0.8.0"
nalgebra = "0.29"
